# r-camera

./: Cargo.toml  README.md  sdkconfig.defaults
src/: lib.rs  main.rs
src/camera_connection/: README.md  mod.rs
src/camera_connection/test/: camera.test.rs
src/data_transfer/: mod.rs
src/examples/: ptp_camera_example.rs
src/ptp_mtp/: README.md  adapter.rs  camera.rs  data_types.rs  device_info.rs  error.rs  mod.rs  standard_codes.rs  usb_transport.rs
src/usb_host/: mod.rs
src/wireless/: README.md  mod.rs
