[package]
name = "rcamera"
version = "0.1.0"
authors = ["waterbang <hsb@truesightai.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rcamera"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# esp-idf相关库
esp-idf-svc = { version = "0.51.0", features = ["critical-section", "embassy-time-driver", "embassy-sync"] }
esp-idf-sys = { version = "0.36", features = ["binstart"] }  
esp-idf-hal = "0.45.2"

# 外部相机连接相关
# rusb = "0.9.1"    
# usb-device = "0.2.9"    

# PTP/MTP协议实现
# ptp = "0.5.0"   
# mtp = "0.5.2"  

# WiFi和蓝牙相关
embedded-svc = "0.26"

# 数据处理相关
bytes = "1.5"
tokio = { version = "1.35", features = ["rt"] }
futures = "0.3"

# 图像处理
image = { version = "0.25.5", default-features = false, features = ["jpeg"] }

[build-dependencies]
embuild = "0.33"
