[package]
name = "rcamera"
version = "0.1.0"
authors = ["waterbang <hsb@truesightai.com>"]
edition = "2021"
resolver = "2"
rust-version = "1.77"

[[bin]]
name = "rcamera"
harness = false # do not use the built in cargo test harness -> resolve rust-analyzer errors

[profile.release]
opt-level = "s"

[profile.dev]
debug = true    # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
default = []

experimental = ["esp-idf-svc/experimental"]

[dependencies]
log = "0.4"
# esp-idf相关库
esp-idf-svc = { version = "0.51.0", features = ["critical-section", "embassy-time-driver", "embassy-sync","experimental"] }
esp-idf-sys = { version = "0.36", features = ["binstart","std"] }  
esp-idf-hal = "0.45.2"

# Embassy相关依赖
embassy-executor = { version = "0.3.0", features = ["task-pool"] }
embassy-time = { version = "0.1.0" }
embassy-futures = "0.1.0"
embassy-sync = "0.3.0"
embassy-usb = { version = "0.1.0", features = ["host"] }

# 外部相机连接相关
byteorder = "1.5.0"
tokio = { version = "1.35", features = ["rt"] }
futures = "0.3"
heapless = "0.8.0"
enumset = "1.1.5"

image = { version = "0.25.6", default-features = false, features = ["jpeg"] }

# UUID支持
uuid = { version = "1.6", features = ["v4"] }



[build-dependencies]
embuild = "0.33"
